# pass-an-image-manojsubrahmanian

./: CMakeLists.txt  brightener.cpp  brightener.h  pass-an-image.cpp
.github/workflows/: msbuild2019.yml
